% Generated by roxygen2: do not edit by hand
% Please edit documentation in R/mazealls.r
\name{mazealls-NEWS}
\alias{mazealls-NEWS}
\title{News for package 'mazealls':}
\description{
News for package \sQuote{mazealls}

\newcommand{\CRANpkg}{\href{https://cran.r-project.org/package=#1}{\pkg{#1}}}
\newcommand{\mazealls}{\CRANpkg{mazealls}}
}
\section{\mazealls{} Initial Version 0.1.0 (2017-11-12) }{

\itemize{
\item first CRAN release.
}
}
