@@ -101,7 +101,17 @@ The \sQuote{inner} and \sQuote{outer} pieces of
 the flake are mazes drawn in different colors.
 }
 \details{
-Draws a maze in an Sierpinski Triangle.
+Draws a maze in an Sierpinski equilateral Triangle. The inner quarter is
+drawn in the secondary color, while the outer three quarters are drawn
+recursively. This is the traditional Sierpinski Triangle, generated when
+\code{style=='four_triangles'}:
+
+\if{html}{
+\figure{sierpinski-1.png}{options: width="100\%" alt="Figure: Sierpinski triangle"}
+}
+\if{latex}{
+\figure{sierpinski-1.png}{options: width=7cm}
+}
 }
 \examples{
 library(TurtleGraphics)
@@ -118,6 +128,7 @@ turtle_do({
 }
 \seealso{
 \code{\link{eq_triangle_maze}},
+\code{\link{hexaflake_maze}},
 \code{\link{sierpinski_carpet_maze}},
 \code{\link{sierpinski_trapezoid_maze}},
 }
